--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1"
+    },
+    "dependencies": {
+        "laravel-file-manager": "^2.5.4",
+        "vue": "^2.6.14",
+        "vuex": "^3.6.2"
     }
 }
